GNOME Bugzilla – Bug 708763
New Terminal (with profile) no longer set profile
Last modified: 2013-12-12 19:59:57 UTC
I have a serie of profiles to connect me to various servers (they set some colours but mostly they have "ssh foobar" set as custom command); using master (2a04a73d2f68a380283f8dfcaf0818fbffdfbc6e) profiles are no longer applied when I open a new tab, the current profile is always used.
Should be fixed on master, please check. (Remember to make sure that gnome-terminal-server is restarted.)