window: Use profile UUID as parameter for new-terminal action

This fixes opening new terminals with a given profile.

https://bugzilla.gnome.org/show_bug.cgi?id=708763